--- a/Programming/src/client/views/fxml/LoginForm.fxml
+++ b/Programming/src/client/views/fxml/LoginForm.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.PasswordField?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="591.0" fitWidth="620.0" pickOnBounds="true">
          <image>
@@ -28,7 +28,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="cardNumberTextField" layoutX="130.0" layoutY="167.0" prefHeight="46.0" prefWidth="359.0" styleClass="payment-text-field">
+      <TextField fx:id="usernameTextField" layoutX="130.0" layoutY="167.0" prefHeight="46.0" prefWidth="359.0" styleClass="payment-text-field">
          <font>
             <Font size="20.0" />
          </font>
@@ -36,6 +36,11 @@
             <URL value="@assets/css/style.css" />
          </stylesheets>
       </TextField>
+      <PasswordField fx:id="passwordTextField" layoutX="130.0" layoutY="258.0" prefHeight="46.0" prefWidth="359.0" styleClass="payment-text-field">
+         <stylesheets>
+            <URL value="@assets/css/style.css" />
+         </stylesheets>
+      </PasswordField>
       <Label layoutX="130.0" layoutY="131.0" text="Username:" textFill="#02457b">
          <font>
             <Font name="System Bold" size="20.0" />
@@ -46,7 +51,7 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button fx:id="confirmPaymentButton" layoutX="130.0" layoutY="333.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="359.0" style="-fx-border-radius: 10;" styleClass="log-buttton" text="Continue" textFill="WHITE">
+      <Button fx:id="confirmLoginButton" layoutX="130.0" layoutY="333.0" mnemonicParsing="false" onMouseClicked="#confirmLoginAction" prefHeight="51.0" prefWidth="359.0" style="-fx-border-radius: 10;" styleClass="log-buttton" text="Continue" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
@@ -57,9 +62,5 @@
             <URL value="@assets/css/style.css" />
          </stylesheets>
       </Button>
-      <PasswordField layoutX="130.0" layoutY="258.0" prefHeight="46.0" prefWidth="359.0" styleClass="payment-text-field">
-         <stylesheets>
-            <URL value="@assets/css/style.css" />
-         </stylesheets></PasswordField>
    </children>
 </AnchorPane>
