--- a/GUI/MainGameScreen.fxml
+++ b/GUI/MainGameScreen.fxml
@@ -30,7 +30,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <GridPane gridLinesVisible="true" prefHeight="591.0" prefWidth="604.0" style="-fx-background-color: white;" styleClass="mygridStyle" stylesheets="@assets/css/style.css">
+      <GridPane fx:id="gameBoardGridPane" gridLinesVisible="true" onMouseClicked="#clickGrid" prefHeight="591.0" prefWidth="604.0" style="-fx-background-color: white;" styleClass="mygridStyle" stylesheets="@assets/css/style.css">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -181,12 +181,12 @@
             <AnchorPane prefHeight="350.0" prefWidth="635.0" style="-fx-background-color: white; -fx-border-color: transparent;" />
          </content>
       </ScrollPane>
-      <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="607.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="prevScreenImageView" fitHeight="35.0" fitWidth="35.0" layoutX="607.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/back.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="35.0" fitWidth="40.0" layoutX="1202.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="homeScreenImageView" fitHeight="35.0" fitWidth="40.0" layoutX="1202.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/home.png" />
          </image>
