--- a/Programming/src/client/views/fxml/RegisterForm.fxml
+++ b/Programming/src/client/views/fxml/RegisterForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="661.0" prefWidth="620.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="661.0" prefWidth="620.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="661.0" fitWidth="620.0" layoutY="7.0" pickOnBounds="true">
          <image>
@@ -46,7 +46,7 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button fx:id="confirmRegisterButton" onMouseClicked="#confirmRegisterAction" layoutX="130.0" layoutY="429.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="359.0" style="-fx-border-radius: 10;" styleClass="log-buttton" text="Sign up" textFill="WHITE">
+      <Button fx:id="confirmRegisterButton" layoutX="130.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#confirmRegisterAction" prefHeight="51.0" prefWidth="359.0" style="-fx-border-radius: 10;" styleClass="log-buttton" text="Sign up" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
@@ -71,5 +71,13 @@
             <URL value="@assets/css/style.css" />
          </stylesheets>
       </PasswordField>
+      <ImageView fx:id="prevScreenImageView" fitHeight="35.0" fitWidth="35.0" layoutX="13.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/img/back.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
    </children>
 </AnchorPane>
