--- a/Programming/src/client/views/fxml/popup.fxml
+++ b/Programming/src/client/views/fxml/popup.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="314.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="215.0" prefWidth="314.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fx:id="tickicon" fitHeight="99.0" fitWidth="103.0" layoutX="107.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="tickIcon" fitHeight="99.0" fitWidth="103.0" layoutX="107.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../assets/images/tickgreen.png" />
          </image>
