--- a/Programming/src/client/views/fxml/HomeScreen.fxml
+++ b/Programming/src/client/views/fxml/HomeScreen.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="1239.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="1239.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="591.0" fitWidth="1241.0" layoutY="1.0" pickOnBounds="true">
          <image>
@@ -31,7 +31,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <ImageView fx:id="leaderBoardImageView" fitHeight="74.0" fitWidth="78.0" layoutX="586.0" layoutY="491.0" onMouseClicked="#handleHomeAction" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="leaderBoardImageView" fitHeight="74.0" fitWidth="78.0" layoutX="586.0" layoutY="474.0" onMouseClicked="#handleHomeAction" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/podium2.png" />
          </image>
@@ -61,7 +61,7 @@
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color blue="1.0" green="1.0" red="1.0" />
+                        <Color red="1.0" green="1.0" blue="1.0" />
                      </color>
                   </Stop>
                </stops>
@@ -71,6 +71,11 @@
       <Label layoutX="416.0" layoutY="369.0" text="Do not have an account?">
          <font>
             <Font size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="551.0" layoutY="554.0" text="Leaderboard" textFill="#fcff32">
+         <font>
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
    </children>
