--- a/Programming/src/client/views/fxml/assets/css/style.css
+++ b/Programming/src/client/views/fxml/assets/css/style.css
@@ -8,7 +8,14 @@
 
     -fx-font-size: 24px;
 
+}
 
+
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
+}
+.scroll-pane {
+   -fx-background-color: white;
 }
 .mygridStyle Line {
   -fx-stroke   : lightgray;
