--- a/Programming/src/client/views/fxml/MainGameScreen.fxml
+++ b/Programming/src/client/views/fxml/MainGameScreen.fxml
@@ -5,11 +5,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -25,7 +27,7 @@
             <Image url="@assets/img/vs.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER_RIGHT" layoutX="609.0" layoutY="56.0" prefHeight="35.0" prefWidth="191.0" text="PhucNguyen" textAlignment="RIGHT" fx:id="xPlayerName">
+      <Label alignment="CENTER_RIGHT" layoutX="609.0" layoutY="56.0" prefHeight="35.0" prefWidth="191.0" text="PhucNguyen" textAlignment="RIGHT" textFill="#ff1c1c" fx:id="xPlayerName">
          <font>
             <Font size="24.0" />
          </font>
@@ -43,7 +45,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <Label fx:id="oPlayerName" layoutX="1060.0" layoutY="56.0" prefHeight="35.0" prefWidth="184.0" text="DzuongThai">
+      <Label fx:id="oPlayerName" layoutX="1060.0" layoutY="56.0" prefHeight="35.0" prefWidth="184.0" text="DzuongThai" textFill="#007aff">
          <font>
             <Font size="24.0" />
          </font>
@@ -62,12 +64,12 @@
          </cursor>
       </ImageView>
       <TextField fx:id="chatTextField" layoutX="605.0" layoutY="548.0" prefHeight="43.0" prefWidth="558.0" styleClass="chat-text-field" stylesheets="@assets/css/style.css" />
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="843.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="843.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" fx:id="xImageView">
          <image>
             <Image url="@assets/img/cross.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="993.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="oImageView" disable="true" fitHeight="40.0" fitWidth="40.0" layoutX="993.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/circle.png" />
          </image>
@@ -93,16 +95,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <Label layoutX="744.0" layoutY="140.0" text="1" fx:id="xPlayerWin">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="oPlayerWin" layoutX="1097.0" layoutY="140.0" text="0">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Label>
       <ImageView fitHeight="43.0" fitWidth="56.0" layoutX="843.0" layoutY="175.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/flag.png" />
@@ -144,9 +136,16 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Pane>
-      <Text fx:id="playerTurnText" layoutX="738.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player" />
-      <Label layoutX="701.0" layoutY="28.0" text="Turn:" />
-      <Label layoutX="851.0" layoutY="29.0" text="You are:" />
-      <Label fx:id="yourMove" layoutX="911.0" layoutY="29.0" text="Label" />
+      <Text fx:id="playerTurnText" fill="#ba53ff" layoutX="806.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="phuc's turn" textAlignment="CENTER" wrappingWidth="270.4000244140625">
+         <font>
+            <Font name="System Bold Italic" size="22.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="0.9473684430122375" green="0.5087719559669495" blue="0.9473684430122375" />
+               </color>
+            </DropShadow>
+         </effect></Text>
    </children>
 </AnchorPane>
