--- a/Programming/src/client/views/fxml/GameModeScreen.fxml
+++ b/Programming/src/client/views/fxml/GameModeScreen.fxml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,18 +8,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="1239.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="1239.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="591.0" fitWidth="1241.0" layoutY="1.0" pickOnBounds="true">
+      <ImageView fitHeight="591.0" fitWidth="1241.0" pickOnBounds="true">
          <image>
             <Image url="@assets/img/bg2.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="practicePlay" layoutX="510.0" layoutY="230.0" mnemonicParsing="false" onMouseClicked="#handleFindGameAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: rgb(233,65,65);" text="Practice play" textFill="WHITE">
+      <Button fx:id="practicePlay" layoutX="510.0" layoutY="221.0" mnemonicParsing="false" onMouseClicked="#handleFindGameAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: rgb(233,65,65);" text="Practice play" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button fx:id="rankPlay" layoutX="509.0" layoutY="309.0" mnemonicParsing="false" onMouseClicked="#handleFindGameAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: rgb(0,134,244);" text="Rank play" textFill="WHITE">
+      <Button fx:id="rankPlay" layoutX="509.0" layoutY="296.0" mnemonicParsing="false" onMouseClicked="#handleFindGameAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: rgb(0,134,244);" text="Rank play" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
@@ -105,20 +99,12 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label fx:id="winningRate" layoutX="1079.0" layoutY="125.0" prefHeight="35.0" prefWidth="56.0" text="831">
+      <Label fx:id="winningRate" layoutX="1079.0" layoutY="125.0" prefHeight="35.0" prefWidth="74.0" text="100.0">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <ImageView fx:id="prevScreenImageView" fitHeight="35.0" fitWidth="35.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@assets/img/back.png" />
-         </image>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </ImageView>
-      <ImageView fx:id="homeScreenImageView" fitHeight="35.0" fitWidth="40.0" layoutX="1190.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="homeScreenImageView" fitHeight="35.0" fitWidth="35.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assets/img/home.png" />
          </image>
@@ -126,7 +112,15 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <Label layoutX="1135.0" layoutY="125.0" prefHeight="35.0" prefWidth="22.0" text="\%">
+      <ImageView fx:id="logoutImageView" fitHeight="35.0" fitWidth="40.0" layoutX="1190.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/img/exit.png" />
+         </image>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </ImageView>
+      <Label layoutX="1140.0" layoutY="125.0" prefHeight="35.0" prefWidth="22.0" text="\%">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
@@ -136,7 +130,7 @@
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Button fx:id="quitQueue" layoutX="510.0" layoutY="381.0" mnemonicParsing="false" onMouseClicked="#handleQuitQueueAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: rgb(255,215,0);" text="Quit Queue" textFill="WHITE">
+      <Button fx:id="quitQueue" layoutX="510.0" layoutY="372.0" mnemonicParsing="false" onMouseClicked="#handleQuitQueueAction" prefHeight="51.0" prefWidth="228.0" style="-fx-base: #ffeb3b;" text="Quit Queue">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
