--- a/Programming/src/client/views/fxml/WaitingScreen.fxml
+++ b/Programming/src/client/views/fxml/WaitingScreen.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="620.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="620.0" style="-fx-background-color: white;" stylesheets="@assets/css/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="458.0" fitWidth="463.0" layoutX="81.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -20,7 +26,7 @@
             <Font name="System Bold Italic" size="26.0" />
          </font>
       </Label>
-      <Button fx:id="quiteQueue" layoutX="228.0" layoutY="521.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="188.0" style="-fx-base: #9b66f9;" text="Quit Queue" textFill="WHITE">
+      <Button fx:id="quitQueue" layoutX="228.0" layoutY="521.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="188.0" style="-fx-base: #9b66f9;" text="Quit Queue" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
